--- a/app/src/main/res/drawable-v21/shape_search.xml
+++ b/app/src/main/res/drawable-v21/shape_search.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <corners android:radius="20dp"/>
+    <corners android:radius="@dimen/default_radius"/>
     <stroke android:color="#6D6D6D"/>
     <solid android:color="#dddd"/>
 
