--- a/app/src/main/res/drawable/shape_btn_edit_profile.xml
+++ b/app/src/main/res/drawable/shape_btn_edit_profile.xml
@@ -5,7 +5,7 @@
 
     <stroke android:width="1dp"
         android:color="@color/gray"/>
-    <corners android:radius="15dp"/>
+    <corners android:radius="@dimen/default_radius"/>
     <gradient android:startColor="@color/pink"
         android:endColor="@color/dark_blue"
         android:angle="180"
