--- a/app/src/main/res/drawable/shape_btn_exit_profile.xml
+++ b/app/src/main/res/drawable/shape_btn_exit_profile.xml
@@ -5,7 +5,7 @@
 
     <stroke android:width="1dp"
         android:color="@color/gray"/>
-    <corners android:radius="15dp"/>
+    <corners android:radius="@dimen/default_radius"/>
     <gradient android:startColor="@color/dark_blue"
         android:endColor="@color/red"/>
 
