--- a/app/src/main/res/layout/activity_edit_information.xml
+++ b/app/src/main/res/layout/activity_edit_information.xml
@@ -10,79 +10,73 @@
     tools:context=".Activities.EditInformation">
     <include layout="@layout/toolbar_second"/>
 
-    <android.support.design.widget.TextInputLayout
-        android:layout_marginTop="50dp"
-        android:layout_marginRight="30dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
         <EditText
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:fontFamily="@font/vazir_medium"
-            android:id="@+id/ed_edit_name"
+            android:padding="8dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="30dp"
             android:layout_marginLeft="30dp"
+            android:textSize="@dimen/text_size_very_small"
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:fontFamily="@font/vazir_medium"
+            android:background="@drawable/selector_default_edittext"
+            android:id="@+id/ed_edit_name"
             android:inputType="text"
             android:maxLines="1"
             android:maxLength="30"
             android:hint="@string/name"/>
 
-    </android.support.design.widget.TextInputLayout>
-
-    <android.support.design.widget.TextInputLayout
-        android:layout_marginTop="10dp"
-        android:layout_marginRight="30dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
         <EditText
+            android:padding="8dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="30dp"
+            android:layout_marginLeft="30dp"
+            android:layout_height="wrap_content"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:textSize="@dimen/text_size_very_small"
             android:inputType="text"
             android:maxLines="1"
+            android:background="@drawable/selector_default_edittext"
             android:fontFamily="@font/vazir_medium"
             android:id="@+id/ed_edit_family"
             android:maxLength="40"
-            android:layout_marginLeft="30dp"
             android:hint="@string/family"/>
 
-    </android.support.design.widget.TextInputLayout>
-
-
-    <android.support.design.widget.TextInputLayout
-        android:layout_marginTop="10dp"
-        android:layout_width="match_parent"
-        android:layout_marginEnd="30dp"
-        android:layout_height="wrap_content" >
         <EditText
+            android:padding="8dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="30dp"
+            android:layout_marginLeft="30dp"
+            android:textSize="@dimen/text_size_very_small"
+            android:layout_height="wrap_content"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
             android:maxLines="1"
             android:maxLength="30"
+            android:background="@drawable/selector_default_edittext"
             android:fontFamily="@font/vazir_medium"
             android:id="@+id/ed_edit_email"
             android:inputType="textEmailAddress"
-            android:layout_marginLeft="30dp"
             android:hint="@string/email"
             android:autofillHints="" />
-    </android.support.design.widget.TextInputLayout>
 
 
-    <android.support.design.widget.TextInputLayout
-        android:layout_marginTop="10dp"
-        android:layout_marginRight="30dp"
-        android:layout_marginLeft="30dp"
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent">
         <EditText
+            android:padding="8dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="30dp"
+            android:layout_marginLeft="30dp"
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:textSize="@dimen/text_size_very_small"
             android:inputType="textMultiLine"
             android:id="@+id/ed_edit_address"
-            android:layout_height="match_parent"
-            android:layout_width="match_parent"
+            android:background="@drawable/selector_default_edittext"
             android:maxLength="500"
             android:fontFamily="@font/vazir_medium"
             android:maxLines="5"
+            android:lines="5"
             android:hint="@string/address"
             />
-    </android.support.design.widget.TextInputLayout>
 
     <Button
         android:layout_width="200dp"
