--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -19,4 +19,5 @@
     <dimen name="txt_size_app_name_toolbar">12sp</dimen>
     <dimen name="txt_size_navigation_items">14sp</dimen>
     <dimen name="txt_size_title_activity_show">14sp</dimen>
+    <dimen name="default_radius">5dp</dimen>
 </resources>
